--- a/TrendMedia/New Group/Search.storyboard
+++ b/TrendMedia/New Group/Search.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="jZ6-dX-0KW">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="M1s-os-Qda">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
@@ -104,6 +104,87 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6TY-cU-mvy" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="867" y="82"/>
+        </scene>
+        <!--Movie Table View Controller-->
+        <scene sceneID="fm4-cl-GLp">
+            <objects>
+                <tableViewController id="M1s-os-Qda" customClass="MovieTableViewController" customModule="TrendMedia" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="eUH-fS-Hi6">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="MovieTableViewCell" rowHeight="140" id="z7d-o5-jw8" customClass="MovieTableViewCell" customModule="TrendMedia" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="44.5" width="414" height="140"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="z7d-o5-jw8" id="JTA-cf-iLi">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="140"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="HjF-ut-QRV">
+                                            <rect key="frame" x="16" y="8" width="93" height="124"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" secondItem="HjF-ut-QRV" secondAttribute="height" multiplier="3:4" id="1bA-Iv-uM6"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="해리포터의 비밀" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="veF-ZD-tcp">
+                                            <rect key="frame" x="125" y="8" width="273" height="18"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="18" id="aqg-bT-VbM"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2022. 22 . 22" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f5a-YH-gNe">
+                                            <rect key="frame" x="125" y="27" width="273" height="16"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="16" id="CSz-AZ-YZk"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NBd-co-oAG">
+                                            <rect key="frame" x="125" y="51" width="273" height="81"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="trailing" secondItem="f5a-YH-gNe" secondAttribute="trailing" constant="16" id="1J4-j7-2a1"/>
+                                        <constraint firstItem="NBd-co-oAG" firstAttribute="leading" secondItem="HjF-ut-QRV" secondAttribute="trailing" constant="16" id="1Tr-Tk-SOx"/>
+                                        <constraint firstAttribute="bottom" secondItem="HjF-ut-QRV" secondAttribute="bottom" constant="8" id="4om-fD-AhG"/>
+                                        <constraint firstAttribute="trailing" secondItem="veF-ZD-tcp" secondAttribute="trailing" constant="16" id="Aef-Ia-ah2"/>
+                                        <constraint firstItem="veF-ZD-tcp" firstAttribute="top" secondItem="JTA-cf-iLi" secondAttribute="top" constant="8" id="IGa-m9-kM6"/>
+                                        <constraint firstItem="HjF-ut-QRV" firstAttribute="top" secondItem="JTA-cf-iLi" secondAttribute="top" constant="8" id="OaW-xl-bBS"/>
+                                        <constraint firstAttribute="bottom" secondItem="NBd-co-oAG" secondAttribute="bottom" constant="8" id="UHv-Uf-kdt"/>
+                                        <constraint firstItem="veF-ZD-tcp" firstAttribute="leading" secondItem="HjF-ut-QRV" secondAttribute="trailing" constant="16" id="deb-mN-qti"/>
+                                        <constraint firstItem="NBd-co-oAG" firstAttribute="top" secondItem="f5a-YH-gNe" secondAttribute="bottom" constant="8" id="e8T-9a-W6Z"/>
+                                        <constraint firstItem="HjF-ut-QRV" firstAttribute="leading" secondItem="JTA-cf-iLi" secondAttribute="leading" constant="16" id="fLH-wI-ShZ"/>
+                                        <constraint firstAttribute="trailing" secondItem="NBd-co-oAG" secondAttribute="trailing" constant="16" id="g9t-Q8-GaE"/>
+                                        <constraint firstItem="f5a-YH-gNe" firstAttribute="leading" secondItem="HjF-ut-QRV" secondAttribute="trailing" constant="16" id="hQn-kC-fDg"/>
+                                        <constraint firstItem="f5a-YH-gNe" firstAttribute="top" secondItem="veF-ZD-tcp" secondAttribute="bottom" constant="1" id="zCh-VV-WHK"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="movieImageView" destination="HjF-ut-QRV" id="Siv-og-8fz"/>
+                                    <outlet property="movieLabel" destination="veF-ZD-tcp" id="hxr-bV-E9J"/>
+                                    <outlet property="plotLabel" destination="NBd-co-oAG" id="CWF-zd-Xq6"/>
+                                    <outlet property="releasedLabel" destination="f5a-YH-gNe" id="Nin-am-xgB"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="M1s-os-Qda" id="vjw-hZ-nuw"/>
+                            <outlet property="delegate" destination="M1s-os-Qda" id="tJJ-MZ-Vmf"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="3mV-bw-UnZ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="868.11594202898561" y="736.60714285714278"/>
         </scene>
     </scenes>
     <resources>
